// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteUserOverviewScreen 1`] = `
<styled.div>
  <styled.div>
    <FormattedMessage
      defaultMessage="Delete account"
      description="Heading for the screen that explains what happens when a user's account is deleted"
      id="focused-task-close-account.delete-account.overview.heading"
      values={Object {}}
    />
  </styled.div>
  <styled.div>
    <FormattedMessage
      defaultMessage="You're about to delete the account of:"
      description="First line for the screen when the user is about to delete their own account"
      id="focused-task-close-account.delete-account.overview.first.line.admin"
      values={Object {}}
    />
  </styled.div>
  <UserInfo
    user={
      Object {
        "avatarUrl": "",
        "email": "catherine.hirons@acme.com",
        "fullName": "Catherine Hirons",
      }
    }
  />
  <FormattedMessage
    defaultMessage="When you delete the account:"
    description="A paragraph explaining that the admin is about to delete another user"
    id="focused-task-close-account.delete-account.overview.paragraph.about-to-delete.admin"
    values={Object {}}
  />
  <styled.ul>
    <li>
      <styled.div>
        <Fragment>
          <FormattedHTMLMessage
            defaultMessage="{fullName} will <b>immediately lose access</b> to all Atlassian services, including sites and products. They currently have access to these services:"
            description="A paragraph explaining that upon deletion the user will lose access to certain services. The second sentence is to begin a list of services the user-to-be-deleted can currently access. {fullName} is filled in by the web app."
            id="focused-task-close-account.delete-account.overview.paragraph.loseAccess.admin"
            values={
              Object {
                "fullName": "Catherine Hirons",
              }
            }
          />
          <DropdownList
            accessibleSites={
              Array [
                "hello.atlassian.net",
                "acme.atlassian.net",
                "test.atlassian.net",
                "bitflix.atlassian.net",
                "Bitbucket",
              ]
            }
          />
        </Fragment>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedHTMLMessage
          defaultMessage="We'll <b>delete their personal data</b>, such as their full name and email address, from Atlassian services within 30 days, except in a few cases where required for legitimate business or legal purposes."
          description="A paragraph explaining what parts of the user's personal data will be deleted"
          id="focused-task-close-account.delete-account.overview.paragraph.personal-data-will-be-deleted.admin"
          values={Object {}}
        />
        <StatefulInlineDialog
          content={
            <div>
              <FormattedMessage
                defaultMessage="We keep personal data for limited periods when we have legitimate business or legal purposes. Some examples include:"
                description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.p1.admin"
                tagName="p"
                values={Object {}}
              />
              <styled.div>
                <FormattedMessage
                  defaultMessage="Information related to purchases, which we're required to keep for financial reporting."
                  description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                  id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.li1.admin"
                  tagName="li"
                  values={Object {}}
                />
                <FormattedMessage
                  defaultMessage="Records showing that we deleted someone's account, which we may need to provide to regulators."
                  description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                  id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.li2.admin"
                  tagName="li"
                  values={Object {}}
                />
                <FormattedMessage
                  defaultMessage="Data that's part of an active lawsuit, which we're required to keep by law."
                  description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                  id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.li3.admin"
                  tagName="li"
                  values={Object {}}
                />
              </styled.div>
              <FormattedMessage
                defaultMessage="We don’t delete any personal data from content created by users, such as names or email addresses they typed in a page or issue. The product admins need to delete that data manually."
                description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.p2.admin"
                tagName="p"
                values={Object {}}
              />
              <FormattedMessage
                defaultMessage="Users have the right to submit complaints to the supervisory authority in their country."
                description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.p3.admin"
                tagName="p"
                values={Object {}}
              />
            </div>
          }
          placement="auto-start"
        >
          <InfoIcon
            label=""
            size="small"
          />
        </StatefulInlineDialog>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedMessage
          defaultMessage="We’ll email you a list of apps that may have stored their personal data."
          description="A note explaining that about apps storing personal data"
          id="focused-task-close-account.delete-account.overview.paragraph.list-of-apps-with-personal-data.admin"
          values={Object {}}
        />
         
        <StatefulInlineDialog
          content={
            <div>
              <FormattedMessage
                defaultMessage="You or other users may have installed apps that add features to Atlassian products. These apps may have stored the user’s profile information."
                description="Text elaborating on the note about apps storing personal data"
                id="focused-task-close-account.delete-account.overview.inline-dialog.data-apps.admin"
                tagName="p"
                values={Object {}}
              />
            </div>
          }
          placement="auto-start"
        >
          <InfoIcon
            label=""
            size="small"
          />
        </StatefulInlineDialog>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedMessage
          defaultMessage="The content they've created will remain in Atlassian services."
          description="A paragraph explaining that although the user's details will be deleted, content they have created will remain."
          id="focused-task-close-account.delete-account.overview.paragraph.content-created.admin"
          values={Object {}}
        />
         
        <StatefulInlineDialog
          content={
            <FormattedMessage
              defaultMessage="For example, pages, issues, and comments they've created in products."
              description="Examples of what constitutes as created content. Appears when the user hovers over the info icon"
              id="focused-task-close-account.delete-account.overview.inline-dialog.content-created.admin"
              values={Object {}}
            />
          }
          placement="auto-start"
        >
          <InfoIcon
            label=""
            size="small"
          />
        </StatefulInlineDialog>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedMessage
          defaultMessage="After a 14-day grace period, you won’t be able to cancel the deletion of the account."
          description="A note explaining about the grace period"
          id="focused-task-close-account.delete-account.overview.paragraph.grace-period.admin"
          values={Object {}}
        />
      </styled.div>
    </li>
  </styled.ul>
  <styled.div>
    <SectionMessage
      appearance="warning"
    >
      <FormattedMessage
        defaultMessage="You can't undo deleting the account after 14 days. If you think you’ll need the account later, deactivate it instead."
        description="A warning message shown to users when they try to delete their account."
        id="focused-task-close-account.delete-account.overview.warning-section.body"
        values={Object {}}
      />
      <p>
        <ForwardRef(WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button))))
          appearance="link"
          onClick={[Function]}
          spacing="none"
        >
          <FormattedMessage
            defaultMessage="Deactivate account"
            description="Text that appears in a button, link or heading for the action of deactivating an account"
            id="focused-task-close-account.deactivate-account"
            values={Object {}}
          />
        </ForwardRef(WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button))))>
      </p>
    </SectionMessage>
  </styled.div>
</styled.div>
`;

exports[`accessibleSites display text displayed is different when no accessibleSites prop is passed 1`] = `
<styled.div>
  <styled.div>
    <FormattedMessage
      defaultMessage="Delete account"
      description="Heading for the screen that explains what happens when a user's account is deleted"
      id="focused-task-close-account.delete-account.overview.heading"
      values={Object {}}
    />
  </styled.div>
  <styled.div>
    <FormattedMessage
      defaultMessage="You're about to delete the account of:"
      description="First line for the screen when the user is about to delete their own account"
      id="focused-task-close-account.delete-account.overview.first.line.admin"
      values={Object {}}
    />
  </styled.div>
  <UserInfo
    user={
      Object {
        "avatarUrl": "",
        "email": "catherine.hirons@acme.com",
        "fullName": "Catherine Hirons",
      }
    }
  />
  <FormattedMessage
    defaultMessage="When you delete the account:"
    description="A paragraph explaining that the admin is about to delete another user"
    id="focused-task-close-account.delete-account.overview.paragraph.about-to-delete.admin"
    values={Object {}}
  />
  <styled.ul>
    <li>
      <styled.div>
        <FormattedHTMLMessage
          defaultMessage="{fullName} will <b>immediately lose access</b> to all Atlassian services, including sites and products. Currently, they don’t have access to any, except <a href=\\"https://confluence.atlassian.com/display/Cloud/Organization+administration\\">services</a> like Community and Marketplace. "
          description="A paragraph explaining that upon deletion the user will lose access to certain services. The second sentence is to begin a list of services the user-to-be-deleted can currently access. {fullName} is filled in by the web app."
          id="focused-task-close-account.delete-account.overview.paragraph.loseAccess.admin.noSites"
          values={
            Object {
              "fullName": "Catherine Hirons",
            }
          }
        />
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedHTMLMessage
          defaultMessage="We'll <b>delete their personal data</b>, such as their full name and email address, from Atlassian services within 30 days, except in a few cases where required for legitimate business or legal purposes."
          description="A paragraph explaining what parts of the user's personal data will be deleted"
          id="focused-task-close-account.delete-account.overview.paragraph.personal-data-will-be-deleted.admin"
          values={Object {}}
        />
        <StatefulInlineDialog
          content={
            <div>
              <FormattedMessage
                defaultMessage="We keep personal data for limited periods when we have legitimate business or legal purposes. Some examples include:"
                description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.p1.admin"
                tagName="p"
                values={Object {}}
              />
              <styled.div>
                <FormattedMessage
                  defaultMessage="Information related to purchases, which we're required to keep for financial reporting."
                  description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                  id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.li1.admin"
                  tagName="li"
                  values={Object {}}
                />
                <FormattedMessage
                  defaultMessage="Records showing that we deleted someone's account, which we may need to provide to regulators."
                  description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                  id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.li2.admin"
                  tagName="li"
                  values={Object {}}
                />
                <FormattedMessage
                  defaultMessage="Data that's part of an active lawsuit, which we're required to keep by law."
                  description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                  id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.li3.admin"
                  tagName="li"
                  values={Object {}}
                />
              </styled.div>
              <FormattedMessage
                defaultMessage="We don’t delete any personal data from content created by users, such as names or email addresses they typed in a page or issue. The product admins need to delete that data manually."
                description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.p2.admin"
                tagName="p"
                values={Object {}}
              />
              <FormattedMessage
                defaultMessage="Users have the right to submit complaints to the supervisory authority in their country."
                description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.p3.admin"
                tagName="p"
                values={Object {}}
              />
            </div>
          }
          placement="auto-start"
        >
          <InfoIcon
            label=""
            size="small"
          />
        </StatefulInlineDialog>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedMessage
          defaultMessage="We’ll email you a list of apps that may have stored their personal data."
          description="A note explaining that about apps storing personal data"
          id="focused-task-close-account.delete-account.overview.paragraph.list-of-apps-with-personal-data.admin"
          values={Object {}}
        />
         
        <StatefulInlineDialog
          content={
            <div>
              <FormattedMessage
                defaultMessage="You or other users may have installed apps that add features to Atlassian products. These apps may have stored the user’s profile information."
                description="Text elaborating on the note about apps storing personal data"
                id="focused-task-close-account.delete-account.overview.inline-dialog.data-apps.admin"
                tagName="p"
                values={Object {}}
              />
            </div>
          }
          placement="auto-start"
        >
          <InfoIcon
            label=""
            size="small"
          />
        </StatefulInlineDialog>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedMessage
          defaultMessage="The content they've created will remain in Atlassian services."
          description="A paragraph explaining that although the user's details will be deleted, content they have created will remain."
          id="focused-task-close-account.delete-account.overview.paragraph.content-created.admin"
          values={Object {}}
        />
         
        <StatefulInlineDialog
          content={
            <FormattedMessage
              defaultMessage="For example, pages, issues, and comments they've created in products."
              description="Examples of what constitutes as created content. Appears when the user hovers over the info icon"
              id="focused-task-close-account.delete-account.overview.inline-dialog.content-created.admin"
              values={Object {}}
            />
          }
          placement="auto-start"
        >
          <InfoIcon
            label=""
            size="small"
          />
        </StatefulInlineDialog>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedMessage
          defaultMessage="After a 14-day grace period, you won’t be able to cancel the deletion of the account."
          description="A note explaining about the grace period"
          id="focused-task-close-account.delete-account.overview.paragraph.grace-period.admin"
          values={Object {}}
        />
      </styled.div>
    </li>
  </styled.ul>
  <styled.div>
    <SectionMessage
      appearance="warning"
    >
      <FormattedMessage
        defaultMessage="You can't undo deleting the account after 14 days. If you think you’ll need the account later, deactivate it instead."
        description="A warning message shown to users when they try to delete their account."
        id="focused-task-close-account.delete-account.overview.warning-section.body"
        values={Object {}}
      />
      <p>
        <ForwardRef(WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button))))
          appearance="link"
          onClick={[Function]}
          spacing="none"
        >
          <FormattedMessage
            defaultMessage="Deactivate account"
            description="Text that appears in a button, link or heading for the action of deactivating an account"
            id="focused-task-close-account.deactivate-account"
            values={Object {}}
          />
        </ForwardRef(WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button))))>
      </p>
    </SectionMessage>
  </styled.div>
</styled.div>
`;

exports[`deactivateUserHandler display warning section is not displayed if the deactivateUserHandler prop is not passed 1`] = `
<styled.div>
  <styled.div>
    <FormattedMessage
      defaultMessage="Delete account"
      description="Heading for the screen that explains what happens when a user's account is deleted"
      id="focused-task-close-account.delete-account.overview.heading"
      values={Object {}}
    />
  </styled.div>
  <styled.div>
    <FormattedMessage
      defaultMessage="You're about to delete the account of:"
      description="First line for the screen when the user is about to delete their own account"
      id="focused-task-close-account.delete-account.overview.first.line.admin"
      values={Object {}}
    />
  </styled.div>
  <UserInfo
    user={
      Object {
        "avatarUrl": "",
        "email": "catherine.hirons@acme.com",
        "fullName": "Catherine Hirons",
      }
    }
  />
  <FormattedMessage
    defaultMessage="When you delete the account:"
    description="A paragraph explaining that the admin is about to delete another user"
    id="focused-task-close-account.delete-account.overview.paragraph.about-to-delete.admin"
    values={Object {}}
  />
  <styled.ul>
    <li>
      <styled.div>
        <Fragment>
          <FormattedHTMLMessage
            defaultMessage="{fullName} will <b>immediately lose access</b> to all Atlassian services, including sites and products. They currently have access to these services:"
            description="A paragraph explaining that upon deletion the user will lose access to certain services. The second sentence is to begin a list of services the user-to-be-deleted can currently access. {fullName} is filled in by the web app."
            id="focused-task-close-account.delete-account.overview.paragraph.loseAccess.admin"
            values={
              Object {
                "fullName": "Catherine Hirons",
              }
            }
          />
          <DropdownList
            accessibleSites={
              Array [
                "hello.atlassian.net",
                "acme.atlassian.net",
                "test.atlassian.net",
                "bitflix.atlassian.net",
                "Bitbucket",
              ]
            }
          />
        </Fragment>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedHTMLMessage
          defaultMessage="We'll <b>delete their personal data</b>, such as their full name and email address, from Atlassian services within 30 days, except in a few cases where required for legitimate business or legal purposes."
          description="A paragraph explaining what parts of the user's personal data will be deleted"
          id="focused-task-close-account.delete-account.overview.paragraph.personal-data-will-be-deleted.admin"
          values={Object {}}
        />
        <StatefulInlineDialog
          content={
            <div>
              <FormattedMessage
                defaultMessage="We keep personal data for limited periods when we have legitimate business or legal purposes. Some examples include:"
                description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.p1.admin"
                tagName="p"
                values={Object {}}
              />
              <styled.div>
                <FormattedMessage
                  defaultMessage="Information related to purchases, which we're required to keep for financial reporting."
                  description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                  id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.li1.admin"
                  tagName="li"
                  values={Object {}}
                />
                <FormattedMessage
                  defaultMessage="Records showing that we deleted someone's account, which we may need to provide to regulators."
                  description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                  id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.li2.admin"
                  tagName="li"
                  values={Object {}}
                />
                <FormattedMessage
                  defaultMessage="Data that's part of an active lawsuit, which we're required to keep by law."
                  description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                  id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.li3.admin"
                  tagName="li"
                  values={Object {}}
                />
              </styled.div>
              <FormattedMessage
                defaultMessage="We don’t delete any personal data from content created by users, such as names or email addresses they typed in a page or issue. The product admins need to delete that data manually."
                description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.p2.admin"
                tagName="p"
                values={Object {}}
              />
              <FormattedMessage
                defaultMessage="Users have the right to submit complaints to the supervisory authority in their country."
                description="Text elaborating on the note that some personal data is required to be saved from deletion for legal purposes."
                id="focused-task-close-account.delete-account.overview.inline-dialog.personal-data-will-be-deleted.p3.admin"
                tagName="p"
                values={Object {}}
              />
            </div>
          }
          placement="auto-start"
        >
          <InfoIcon
            label=""
            size="small"
          />
        </StatefulInlineDialog>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedMessage
          defaultMessage="We’ll email you a list of apps that may have stored their personal data."
          description="A note explaining that about apps storing personal data"
          id="focused-task-close-account.delete-account.overview.paragraph.list-of-apps-with-personal-data.admin"
          values={Object {}}
        />
         
        <StatefulInlineDialog
          content={
            <div>
              <FormattedMessage
                defaultMessage="You or other users may have installed apps that add features to Atlassian products. These apps may have stored the user’s profile information."
                description="Text elaborating on the note about apps storing personal data"
                id="focused-task-close-account.delete-account.overview.inline-dialog.data-apps.admin"
                tagName="p"
                values={Object {}}
              />
            </div>
          }
          placement="auto-start"
        >
          <InfoIcon
            label=""
            size="small"
          />
        </StatefulInlineDialog>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedMessage
          defaultMessage="The content they've created will remain in Atlassian services."
          description="A paragraph explaining that although the user's details will be deleted, content they have created will remain."
          id="focused-task-close-account.delete-account.overview.paragraph.content-created.admin"
          values={Object {}}
        />
         
        <StatefulInlineDialog
          content={
            <FormattedMessage
              defaultMessage="For example, pages, issues, and comments they've created in products."
              description="Examples of what constitutes as created content. Appears when the user hovers over the info icon"
              id="focused-task-close-account.delete-account.overview.inline-dialog.content-created.admin"
              values={Object {}}
            />
          }
          placement="auto-start"
        >
          <InfoIcon
            label=""
            size="small"
          />
        </StatefulInlineDialog>
      </styled.div>
    </li>
    <li>
      <styled.div>
        <FormattedMessage
          defaultMessage="After a 14-day grace period, you won’t be able to cancel the deletion of the account."
          description="A note explaining about the grace period"
          id="focused-task-close-account.delete-account.overview.paragraph.grace-period.admin"
          values={Object {}}
        />
      </styled.div>
    </li>
  </styled.ul>
</styled.div>
`;
